@@ -1,6 +1,7 @@
 46
 ================
 
+04/08/22 Final refactor/speed improvements to home screen
 03/08/22 Visual indicator of cache time used on home screen sections
 03/08/22 "Up for adoption" home page links should obey sites/location filters
 03/08/22 News checks should be part of the batch with no blocking of home page
